Mon Aug 16 11:11:19 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstbusmixer.[hc]: new container to display mixer GUI
	for songs.

	* beast-gtk/bstbuseditor.[hc]: new widget prototype for busses of
	the song mixer.

	* beast-gtk/dialogs/radgets-beast.xml: got rid of redundant shadow-type
	specifications for scrolled windows.
	bus-editor: new widget definition, containing simple GUI mockup.
	bus-mixer: new container definition for mixer GUI.

	* beast-gtk/bstmain.c: provide application name.

	* beast-gtk/bstsupershell.c: added "Mixer" notebook page to songs.

	* beast-gtk/bstutils.c: register busmixer and buseditor as radget types.

	* beast-gtk/testgui.c: added GUI test program.
	used to test BstDbMeter in its first incarnation.

Sun Aug 15 13:57:56 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/radgets-standard.xml:
	widget-patcher: support bg-as-base and base-as-bg properties.
	entry: support activates-default property.
	frame: support shadow-type property.
	viewport: support widget type, set the default shadow-type to none.
	scrolled-window: set the default shadow-type to in.
	gxk-scroll-text-toolbar: don't activate default widget upon
	<Return> key press in location entry.

Sun Aug 01 11:41:03 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/splinetest.c: minor cleanups, more testing.

	* beast-gtk/gxk/gxkspline.[hc]: added gxk_spline_copy(), some fixups.

	* beast-gtk/gxk/gxkradget.c: register GtkViewport as radget type.

	* beast-gtk/gxk/gxkdialog.c: use g_get_application_name() as GUI
	program name.

	* beast-gtk/gxk/gxkauxwidgets.[hc]: support patching up widgets, so
	that the base color looks like the background color or vice versa.

Fri Jul 30 11:28:02 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkspline.h: 
	* beast-gtk/gxk/gxkspline.c: natural and not-a-knot interpolating spline
	implementation with inverse lookup (abscissa finder).

	* beast-gtk/gxk/splinetest.c: spline test porgram.

Sat Jul 24 08:20:32 2004  Tim Janik  <timj@gtk.org>